--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,9 @@
 name = "wrapp"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "Add additional functionality to Rust errors using a wrapper."
+repository = "githttps://github.com/silvasch/wrapp.git"
+documentation = "https://docs.rs/wrapp"
 
 [dependencies]
